--- a/first-project/index.html
+++ b/first-project/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify</title>
-  <script src="https://kit.fontawesome.com/dab690a483.js" crossorigin="anonymous">
-  </script>
+  <script src="https://kit.fontawesome.com/dab690a483.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
